--- a/views/toponomi.html
+++ b/views/toponomi.html
@@ -49,17 +49,17 @@
 
 <body>
     <h3 class="center">Pendataan Nama Rupabumi</h3>
-    {{instansiInfo}}
+    <!-- {{instansiInfo}} -->
     <table>
         <thead>
             <tr>
-                <th class="center">Tanggal</th>
-                <!-- <th class="center">Status</th>
+                <th class="center" style="width: 11%;">Tanggal</th>
+                <th class="center">Status</th>
                 <th class="center">ID Toponim</th>
                 <th class="center">Nama Tempat</th>
                 <th class="center">Kecamatan</th>
                 <th class="center">Desa</th>
-                <th class="center">Kecamatan</th> -->
+                <th class="center">Keterangan</th>
             </tr>
         </thead>
         <tbody>
